Also explain uniqueness of biuniversal ctx extension

--- a/main.tex
+++ b/main.tex
@@ -135,7 +135,7 @@ Given an lcc functor $f : \Gamma \rightarrow \Delta$ and term $\Delta \vdash w :
     \langle f, s \rangle : \Gamma_{/ \sigma} \arrow[r, "{f_{/ \sigma}}"] & \Delta_{/ f(\sigma)} \arrow[r, "s^*"] & \Delta,
   \end{tikzcd}
 \end{equation}
-however, $\langle f, s \rangle$ commutes with $\sigma^*$ and $f$ only up to natural isomorphism, and the equation $\langle f, s \rangle(d) = s$ holds only up to this natural isomorphism.
+however, $\langle f, s \rangle$ commutes with $\sigma^*$ and $f$ only up to natural isomorphism, the equation $\langle f, s \rangle(d) = s$ holds only up to this natural isomorphism, and $\langle f, s \rangle$ is unique only up to unique isomorphism.
 
 The issue with context extensions can be understood from the perspective of comprehension categories, an alternative notion of model of type theory, as follows.
 Our cwf is constructed on the opposite of $\mathrm{Lcc}$, the category of lcc categories and lcc functors.\footnote{
