Clarify which (bi)pushout square are the problem

--- a/main.tex
+++ b/main.tex
@@ -174,7 +174,7 @@ Here the main problem is the base category, however:
 The required pullback diagrams exist only in the bicategorical sense.
 Thus the usual constructions \citep{on-the-interpretation-of-type-theory-in-lcc-categories,the-local-universes-model} are not applicable.
 
-The goal must thus be to find a category that is (bi)equivalent to $\mathrm{Lcc}$ in which we can replace slice categories by 1-categorical pushouts.
+The goal must thus be to find a category that is (bi)equivalent to $\mathrm{Lcc}$ in which we can replace the bipushout squares \eqref{eq:homotopy-pushout-comprehension} by 1-categorical pushouts.
 Our tool of choice to that end will be \emph{model category theory} (see e.g.\@ \citet{hirschhorn}).
 Model categories are presentations of higher categories as ordinary 1-categories with additional structure.
 Crucially, model categories allow the computation of higher (co)limits as ordinary 1-categorical (co)limits under suitable hypotheses.
