Remove incorrect object of id morphism

--- a/main.tex
+++ b/main.tex
@@ -997,7 +997,7 @@ We denote by $\eta : \mathrm{Id} \Rightarrow G F : \mathrm{Lcc} \rightarrow \mat
 \begin{proof}
   It suffices to construct a natural isomorphism
   \begin{equation}
-    \psi : \mathrm{id}_{G(\Gamma)} \cong \eta_{G(\Gamma)} \circ G(\varepsilon_\Gamma)
+    \psi : \mathrm{id} \cong \eta_{G(\Gamma)} \circ G(\varepsilon_\Gamma)
   \end{equation}
   of lcc endofunctors on $G(F(G(\Gamma)))$ for every strict lcc category $\Gamma$, because then
   \begin{equation}
