--- a/main.bib
+++ b/main.bib
@@ -157,11 +157,13 @@
 }
 
 @book{basic-concepts-of-enriched-category-theory,
-  title={Basic concepts of enriched category theory},
-  author={Kelly, Gregory Maxwell and Kelly, Max},
-  volume={64},
-  year={1982},
-  publisher={CUP Archive}
+  title = {Basic concepts of enriched category theory},
+  publisher = {Cambridge University Press},
+  year = {1982},
+  author = {G. M. Kelly},
+  volume = {64},
+  series = {London Mathematical Society Lecture Note Series},
+  note = {Also available online in Reprints in Theory and Applications of Categories, No. 10 (2005) pp. 1-136}
 }
 
 @book{enriched-kan-extensions,
