Cite enriched model categories where it was published

--- a/main.bib
+++ b/main.bib
@@ -208,17 +208,17 @@
   title={Model categories and their localizations},
   author={Hirschhorn, Philip S.},
   number={99},
-  year={2009},
+  year={2003},
   publisher={American Mathematical Soc.}
 }
 
 @misc{enriched-model-cats,
   title={Enriched model categories and presheaf categories},
   author={Bertrand Guillou and J. Peter May},
-  year={2011},
-  eprint={1110.3567},
-  archivePrefix={arXiv},
-  primaryClass={math.AT}
+  journal={New York J. of Mathematics},
+  volume={26},
+  pages={37--91},
+  year={2020}
 }
 
 @article{groupoid-model-cat,
