Add pages to Maietti (2010)

--- a/main.bib
+++ b/main.bib
@@ -262,5 +262,6 @@
   author={Maietti, Maria Emilia},
   journal={Theory \& Applications of Categories},
   volume={24},
+  pages={39--83},
   year={2010}
 }
